--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-title: [Welcome To My Blog]
-description: [BLEH]
-
-
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-hacker
