--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: S1ckB0y's Cyber Cave
+description: InfoSec and Research Blog
 theme: jekyll-theme-hacker
